--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "3.4.1",
     "react-share": "^4.1.0",
     "react-spring": "^8.0.27",
+    "react-virtualized": "^9.21.2",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3"
   },
